css/index.css
/* ... */
.bg-dark-purple {
  background-color: #29244E; }

.bg-dark-purple-opacity8 {
  background-color: rgba(41, 36, 78, 0.8); }

.bg-cyan {
  background-color: #009FFF; }

.bg-soft-orange {
  background-color: #FFB500; }

.bg-highlight-yellow {
  background: #FEFF7C; }

.c-white {
  color: #FFFFFF; }

.c-white-opacity {
  color: rgba(255, 255, 255, 0.4); }

.c-cyan {
  color: #009FFF; }

.c-red, .invalid {
  color: #FC035E !important; }

.c-green, .new-element, .success {
  color: #11C26F !important; }

.c-soft-orange {
  color: #FFB500; }

.c-dark-purple {
  color: #29244E; }

.c-dark-purple-opacity, .untested {
  color: rgba(41, 36, 78, 0.4) !important; }

.c-light-purple {
  color: #E8E5FF; }

html {
  height: 100%; }

body {
  color: #000000;
  font-family: "Open Sans", sans-serif;
  font-size: 16px;
  height: 100%;
  line-height: normal; }

.main-content {
  padding-bottom: 146px; }

b, strong {
  font-weight: bolder; }

img {
  max-width: 100%;
  height: auto; }

.light {
  font-weight: lighter; }

h1 {
  font-size: 1.5em; }
  @media (min-width: 800px) {
    h1 {
      font-size: 2.25em;
      line-height: 1.2em; } }

h2 {
  font-size: 1.25em; }
  @media (min-width: 800px) {
    h2 {
      font-size: 1.5em;
      line-height: 1.25em; } }

h3 {
  font-size: 1.25em; }

.main-content {
  min-height: 100%;
  position: relative; }

.txt18 {
  font-size: 18px;
  line-height: 24px; }

.txt14 {
  font-size: 14px;
  line-height: 20px; }

.txt12 {
  font-size: 12px;
  line-height: 20px; }

.txt10 {
  font-size: 10px;
  line-height: 20px; }

.lh-24px {
  line-height: 24px; }

.sans-serif {
  font-family: "Open Sans", sans-serif; }

.serif {
  font-family: "PT Serif", serif; }

.bold-sans-serif {
  font-family: "Open Sans", sans-serif;
  font-weight: bold; }

.bold-serif {
  font-family: "PT Serif", serif;
  font-weight: bold; }

.yellow-highlight {
  background-color: #FEFF7C; }

.yellow-alert-txt {
  color: #FEFF7C;
  font-size: 0.875em;
  line-height: 1.25em; }

@media (min-width: 800px) {
  .overflow-hidden {
    overflow: hidden; } }

.shadow {
  -moz-box-shadow: 0 0 15px 0px rgba(0, 0, 0, 0.2);
  -webkit-box-shadow: 0 0 15px 0px rgba(0, 0, 0, 0.2);
  box-shadow: 0 0 15px 0px rgba(0, 0, 0, 0.2); }

.mask {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  opacity: 0.9;
  width: 100%; }

.inline {
  display: inline-block; }

.f-left {
  float: left; }

.f-right {
  float: left; }
  @media (min-width: 800px) {
    .f-right {
      float: right; } }

.table {
  display: table; }

.table-cell {
  display: inline-block;
  height: 100%; }
  @media (min-width: 800px) {
    .table-cell {
      display: table-cell !important; } }

.align-bottom {
  position: absolute;
  bottom: 0;
  left: 0; }

.align-top {
  vertical-align: top !important; }

.align-middle {
  vertical-align: middle !important; }

.c-center {
  margin: 0 auto; }

.t-left {
  text-align: left; }

.t-right {
  text-align: left; }
  @media (min-width: 800px) {
    .t-right {
      text-align: right; } }

.highlighted-txt p span {
  background: #FEFF7C; }

.line-clamp-x1 {
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow: hidden; }

.txt-top {
  vertical-align: text-top; }

.border-bottom {
  border-bottom: 1px solid #F0F0F0; }

.label-wrap.add-btn input {
  display: inline-block;
  width: 80%;
  margin-right: 2%; }
.label-wrap.add-btn button {
  display: inline-block; }

.label-wrap {
  position: relative;
  margin-top: 10px; }
  .label-wrap label {
    background-color: #FFFFFF;
    color: rgba(41, 36, 78, 0.4);
    font-family: "Open Sans", sans-serif;
    font-size: 10px;
    position: absolute;
    left: 15px;
    padding: 3px;
    top: -11px; }

.small-input {
  max-width: 90px;
  display: inline-block !important;
  width: 100%; }

.small-input.m-right {
  margin-right: 1em !important; }

.med-input {
  margin-right: 1em !important;
  position: relative;
  display: inline-block !important;
  margin-bottom: 20px; }
  @media (min-width: 800px) {
    .med-input {
      width: 40% !important;
      margin-bottom: 0; } }

@media (min-width: 800px) {
  .med-input-x1 {
    width: 60% !important;
    margin-bottom: 0; } }

.input-x2 {
  display: inline-block;
  max-width: 200px;
  width: 100%; }

.size-x3 {
  display: inline-block;
  max-width: 254px;
  width: 100%; }

label {
  display: block;
  font-family: "PT Serif", serif;
  margin-bottom: 1em; }

input.serif, select.serif, textarea.serif {
  font-family: "PT Serif", serif !important; }

.textarea-input-x1 {
  min-height: 203px; }

.input-x1 {
  padding: 0.35em 1em !important; }
  .input-x1::-webkit-input-placeholder {
    font-weight: 400; }
  .input-x1::-moz-placeholder {
    font-weight: 400; }
  .input-x1:-ms-input-placeholder {
    font-weight: 400; }
  .input-x1:-moz-placeholder {
    font-weight: 400; }
  .input-x1.bg-red {
    background: #E95454 !important; }
  .input-x1.bg-green {
    background: #11C26F !important; }
  .input-x1.bg-soft-green {
    background: #32D59A !important; }
  .input-x1.bg-blue {
    background: #5475E9 !important; }
  .input-x1.bg-orange {
    background: #FF9000 !important; }
  .input-x1.bg-yellow {
    background: #FFEF00 !important; }
  .input-x1.bg-purple {
    background: #B676EC !important; }
  .input-x1.bg-light-blue {
    background: #6BC7FF !important; }
  .input-x1.bg-light-blue, .input-x1 .bg-red, .input-x1 .bg-green, .input-x1 .bg-soft-green, .input-x1 .bg-blue, .input-x1 .bg-orange, .input-x1 .bg-purple {
    color: #FFFFFF !important;
    font-weight: bold; }
  .input-x1.bg-yellow {
    color: #29244E !important;
    font-weight: bold; }

select {
  background: url("../img/select-down.png") right no-repeat; }

.select-input {
  background: url("../img/select-down.png") right no-repeat; }
/* ... */

